tests/errors/type_check/declaration/validate_undeclared_type_inside_ref.sim
fn f(x: &mut Nope) { entry: return }