tests/errors/type_check/declaration/validate_undeclared_type_inside_ref.err.expected
error: at 1:6: [TC-InvalidDeclaredType] In function 'f', parameter 'x': Use of undeclared type 'Nope'
   |
 1 | fn f(x: &mut Nope) { entry: return }
   |      ^^^^^^^^^^^^
